--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "express": "^4.19.2",
-    "joi": "^17.12.3"
+    "express-jwt": "^8.4.1",
+    "express.js": "^1.0.0",
+    "joi": "^17.12.3",
+    "yaml": "^2.4.1"
   }
 }
