--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
+    "eslint": "^9.1.0",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
-    "express.js": "^1.0.0",
-    "joi": "^17.13.0",
-    "jsonwebtoken": "^9.0.2",
+    "joi": "^17.12.3",
     "pg-promise": "^11.6.0",
     "yaml": "^2.4.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.5"
   }
 }
