--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "eslint": "^9.1.0",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
-    "joi": "^17.12.3",
+    "express.js": "^1.0.0",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "pg-promise": "^11.6.0",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.2"
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.1.0",
