--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_USER=postgres
 DB_PASS=password
 PORT=5432
 DB_DATABASE=postgres
+GOOGLE_MAPS_API_KEY=AIzaSyAigRvrYOcSCVSSyog-4Y5U9GJvrf3P_xY
+PROVIDER_RANGE_KM=20
