--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "eslint": "^9.1.0",
