--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.1.0",
     "express": "^4.19.2",
