--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-geocoder": "^4.3.0",
     "pg-promise": "^11.6.0",
     "yaml": "^2.4.2"
   },
