--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-geocoder": "^4.3.0",
     "pg": "^8.12.0",
     "pg-promise": "^11.8.0",
+    "stripe": "^16.1.0",
     "yaml": "^2.4.2"
   },
   "devDependencies": {
